# kunlabori

./: .firebaserc  .gitignore  Dockerfile  README.md  analysis_options.yaml  mise.toml  pubspec.yaml
.github/: copilot-instructions.md
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: action_view.dart  collaborative_selectable_text.dart  debug_view.dart  editor_view.dart  event_handler.dart  home_drawer.dart  home_page.dart  home_page.g.dart  main.dart  message.dart  message.freezed.dart  message.g.dart  provider.dart  provider.g.dart  settings_page.dart  use_case_provider.dart  use_case_provider.g.dart
lib/application/: document_use_case.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: interface.rs  model.rs
rust/src/domain/: app_state.rs  document.rs  document_config.rs  error.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_kunlabori.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_kunlabori.podspec
rust_builder/windows/: CMakeLists.txt
server/: .dockerignore  Cargo.toml  Dockerfile
server/src/: error.rs  lib.rs  main.rs  messages.rs  peer.rs  websocket.rs
web/: index.html  manifest.json  serve.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
(+26 files in other folders)
