[package]
name = "rust_lib_kunlabori"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
log = "0.4.28"
serde_json = "1.0"
thiserror = "2.0"
yrs = "0.24.0"

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[features]
default = ["log"]
log = []
