[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
futures-channel = "0.3.31"
futures-util = "0.3.31"
log = "0.4.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
